--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap');
     </style>
+    <script src="https://kit.fontawesome.com/842a65c9f3.js" crossorigin="anonymous"></script>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
